# pysatMadrigal

./: .coveragerc  .gitignore  .travis.yml  .zenodo.json  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  conda_requirements.txt  description.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/: pull_request_template.md
.github/workflows/: docs.yml  main.yml  pip_rc_install.yml  pysat_rc.yml  pythonpackage.yml
docs/: Makefile  citing.rst  conf.py  develop_guide.rst  examples.rst  index.rst  installation.rst  methods.rst  overview.rst  requirements.txt  supported_instruments.rst
docs/examples/: ex_dmsp_methods.rst  ex_gnss_tec.rst  ex_init.rst  ex_jro_isr_beam.rst
pysatMadrigal/: __init__.py  coords.py
pysatMadrigal/instruments/: __init__.py  dmsp_ivm.py  dmsp_ssj.py  gnss_tec.py  jro_isr.py  madrigal_dst.py  madrigal_geoind.py  madrigal_pandas.py  ngdc_ae.py  omni2_imf.py
pysatMadrigal/instruments/methods/: __init__.py  dmsp.py  general.py  gnss.py  jro.py  madrigal.py
pysatMadrigal/instruments/templates/: madrigal_pandas.py
pysatMadrigal/tests/: __init__.py  test_coords.py  test_general_methods.py  test_instruments.py  test_methods_dmsp.py  test_methods_general.py  test_methods_gnss.py  test_methods_jro.py  test_utils_coords.py
pysatMadrigal/utils/: __init__.py  coords.py
