[build-system]
requires = ["setuptools >= 38.6", "pip >= 10"]
build-backend = "setuptools.build_meta"

[project]
name = "pysatMadrigal"
version = "0.2.0"
description = 'Madrigal instrument support for the pysat ecosystem'
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Angeline G. Burrell et al.", email = "pysat.developers@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows"
]
keywords = [
  "pysat",
  "ionosphere",
  "Madrigal",
  "CEDAR",
  "thermosphere",
  "GPS",
  "GNSS",
  "TEC",
  "Jicamarca",
  "DMSP",
  "ISR",
  "Incoherent scatter radar",
]
dependencies = [
  "h5py",
  "madrigalWeb",
  "numpy",
  "packaging",
  "pandas",
  "pysat>=3.1.0",
  "xarray"]

[project.optional-dependencies]
test = [
  "coveralls",
  "flake8",
  "flake8-docstrings",
  "hacking >= 1.0",
  "pytest",
  "pytest-cov",
  "pytest-ordering"
]
doc = [
  "extras_require",
  "ipython",
  "m2r2",
  "numpydoc",
  "pyproject_parser",
  "sphinx",
  "sphinx_rtd_theme >= 1.2.2, < 2.0.0"
]

[project.urls]
Documentation = "https://pysatmadrigal.readthedocs.io/en/latest/"
Source = "https://github.com/pysat/pysatMadrigal"

[tool.coverage.report]

[tool.pytest.ini_options]
addopts = "-x --cov=pysatMadrigal"
markers = [
  "all_inst",
  "download",
  "no_download",
  "load_options",
  "first",
  "second"
]
