[metadata]
name = pysatMadrigal
version = file: pysatMadrigal/version.txt
url = https://github.com/pysat/pysatMadrigal
author = Angeline G. Burrell, et al.
author_email = pysat.developers@gmail.com
description = 'Madrigal instrument support for the pysat ecosystem'
keywords =
  pysat
  ionosphere
  Madrigal
  CEDAR
  thermosphere
  GPS
  GNSS
  TEC
  Jicamarca
  DMSP
  ISR
  Incoherent scatter radar
classifiers =
  Development Status :: 3 - Alpha
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Atmospheric Science
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Linux
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires = setuptools >= 38.6; pip >= 10
include_package_data = True
zip_safe = False
packages = find:
install_requires = h5py
		   madrigalWeb
		   numpy
		   pandas
		   pysat
		   xarray

[coverage:report]
omit = */instruments/templates/

[flake8]
max-line-length = 80
ignore = W503

[tool:pytest]
markers =
    all_inst: tests all instruments
    download: tests for downloadable instruments
    no_download: tests for instruments without download support
    first: first tests to run
    second: second tests to run
    
